--- a/IA651_Project_Code_Part2.ipynb
+++ b/IA651_Project_Code_Part2.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Using features not associated with a team's goal_differential to fit a linear model and assess it compared to other models."
+   ]
   },
   {
    "cell_type": "code",
@@ -51,6 +53,13 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Leading in the same data:"
    ]
   },
   {
@@ -230,6 +239,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selecting the new features for the linear regression model:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -360,12 +376,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a train test split:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scaling the data:"
    ]
   },
   {
@@ -387,6 +417,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fitting the linear regression model:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -398,6 +435,13 @@
     "\n",
     "y_train_pred = model.predict(X_train_scaled)\n",
     "y_test_pred = model.predict(X_test_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtaining MSE and R Squared values:"
    ]
   },
   {
@@ -426,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtaining the coefficents for the x variables:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -444,6 +495,13 @@
    ],
    "source": [
     "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtaining the intercept value:"
    ]
   },
   {
@@ -471,6 +529,13 @@
    "metadata": {},
    "source": [
     "### SVR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Performing SVR with the reduced features:"
    ]
   },
   {
@@ -545,6 +610,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Performing a grid search to find optimal gamma and C:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -578,6 +650,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fitting SVR again but with optimal gamma and C:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -589,6 +668,13 @@
     "\n",
     "y_test_pred_SVR = model.predict(X_test_scaled)\n",
     "y_train_pred_SVR = model.predict(X_train_scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtaining the MSE values:"
    ]
   },
   {
@@ -611,6 +697,13 @@
     "\n",
     "print(f'Training MSE SVR: {mse_train_SVR}')\n",
     "print(f'Test MSE SVR: {mse_test_SVR}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtaining the R Squared values:"
    ]
   },
   {
