--- a/IA651_Project_Code_Part2.ipynb
+++ b/IA651_Project_Code_Part2.ipynb
@@ -625,7 +625,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 35 candidates, totalling 175 fits\n",
+      "Fitting 5 folds for each of 35 candidates, totalling 175 fits\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Negative MSE: -108.45965244112892\n",
       "Best Parameters: {'C': 1000, 'gamma': 0.01}\n"
      ]
